--- a/04-analytics-engineering/taxi_rides_ny/dbt_project.yml
+++ b/04-analytics-engineering/taxi_rides_ny/dbt_project.yml
@@ -38,3 +38,5 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   ny_taxi_rides:
 
+vars:
+  payment_type_values: [1,2,4,3,5,6]
